objects/Master_Configurator__c.object
<CustomObject>
    <description>This object stores an Master level configuration whose purpose is to house junctions between sales configurations and module/inverter combos. 
This is being used in Cash Ordering and Lease/Loan.
Release WW 22 - 2016</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration_Model__c</fullName>
        <description>Cash Orders Redesign - field to describe the type of configuration model being portrayed</description>
        <label>Configuration Model</label>
        <picklist>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equinox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Helix Roof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Helix Tracker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Helix Carport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunPower Carport (Non-Helix)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Span Carport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garage Top Carport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-SPWR Roof Mounted Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-SPWR Ground Fixed Tilt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PV Only/PV+Inverter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Identifier__c</fullName>
        <description>Cash Flow- unique identifier to populate the parent</description>
        <label>Identifier</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Use_Case_Description__c</fullName>
        <description>Detailed use case for this master stack, e.g. Includes Revenue Grade Monitoring for Lease in CA</description>
        <inlineHelpText>Detailed use case for this master stack, e.g. Includes Revenue Grade Monitoring for Lease in CA</inlineHelpText>
        <label>Use Case Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Master Configurator</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Configuration_Model__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Order</value>
        </filters>
        <label>Cash Order</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Master_Detail_View</fullName>
        <columns>NAME</columns>
        <columns>Configuration_Model__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Master Detail View</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Quote</fullName>
        <columns>NAME</columns>
        <columns>Configuration_Model__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Quote</value>
        </filters>
        <label>Quote</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sunverge_MCs</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Sunverge</value>
        </filters>
        <label>Sunverge MCs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Master Configurator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Configurators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>